--- a/crop prediction/templates/predict.html
+++ b/crop prediction/templates/predict.html
@@ -16,22 +16,22 @@
                 <label for="Nitrogen">🌾 Nitrogen:</label>
                 <input type="text" id="Nitrogen" name="Nitrogen" placeholder="e.g. 90" required>
 
-                <label for="Phosphorus">🧪 Phosphorus:</label>
+                <label for="Phosphorus">🔥Phosphorus:</label>
                 <input type="text" id="Phosphorus" name="Phosphorus" placeholder="e.g. 42" required>
 
-                <label for="Potassium">🧬 Potassium:</label>
+                <label for="Potassium">🧬Potassium:</label>
                 <input type="text" id="Potassium" name="Potassium" placeholder="e.g. 43" required>
 
-                <label for="Temperature">🌡️ Temperature (°C):</label>
+                <label for="Temperature">🌡️Temperature (°C):</label>
                 <input type="text" id="Temperature" name="Temperature" placeholder="e.g. 20.8" required>
 
-                <label for="Humidity">💧 Humidity (%):</label>
+                <label for="Humidity">💧Humidity (%):</label>
                 <input type="text" id="Humidity" name="Humidity" placeholder="e.g. 82" required>
 
-                <label for="ph">🧉 pH (0 - 14):</label>
+                <label for="ph">🧪pH (0 - 14):</label>
                 <input type="text" id="ph" name="ph" placeholder="e.g. 6.5" required>
 
-                <label for="Rainfall">🌧️ Rainfall (mm):</label>
+                <label for="Rainfall">🌧️Rainfall (mm):</label>
                 <input type="text" id="Rainfall" name="Rainfall" placeholder="e.g. 202" required>
 
                 <input type="submit" value="🚀 Predict Crop">
